--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ update by TF on October 4th, 2021 at 8:14 PM
 <!--head setup and css linkage-->
   <head>
       <title>MultTable</title>
-      <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.3/themes/hot-sneaks/jquery-ui.css" />
+      <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.3/themes/hot-sneaks/jquery-ui.css" />
       <link href="index.css" rel="stylesheet">
   </head>
 <!--body setup-->
